--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,16 +1,14 @@
  <p>
         <mat-toolbar color="primary">
           <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-            <mat-icon>menu</mat-icon>
+             <mat-icon>grade</mat-icon>
           </button>
-          <span class="uppercase">Quotes</span>
+          <span class="text-uppercase">My Quotes</span>
           <span class="example-spacer"></span>
           <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
             <mat-icon>favorite</mat-icon>
           </button>
-          <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-            <mat-icon>share</mat-icon>
-          </button>
+          <button mat-raised-button color="accent">Add Your Quotes</button>
         </mat-toolbar>
       </p>
 
