--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -8,7 +8,7 @@
           <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
             <mat-icon>favorite</mat-icon>
           </button>
-          <button mat-raised-button color="accent" >Add Your Quotes</button>
+          <button mat-raised-button color="accent" (click)="openDialog()">Add Your Quotes</button>
         </mat-toolbar>
       </p>
 
