--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,1 +1,7 @@
-<p>form works!</p>
+<h1 mat-dialog-title>Write your favorite quotes</h1>
+<div mat-dialog-content>
+    <mat-form-field appearance="fill">
+        <mat-label>Textarea</mat-label>
+        <textarea matInput></textarea>
+      </mat-form-field>
+</div>
