added text-area field input

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,7 +1,10 @@
 <h1 mat-dialog-title>Write your favorite quotes</h1>
-<div mat-dialog-content>
-    <mat-form-field appearance="fill">
-        <mat-label>Textarea</mat-label>
-        <textarea matInput></textarea>
-      </mat-form-field>
-</div>
+
+<p>
+    <mat-form-field appearance="outline">
+      <mat-label>Your quote here</mat-label>
+      <input matInput placeholder="Quotes">
+      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+      <mat-hint>Hint</mat-hint>
+    </mat-form-field>
+  </p>
