Included 2 name inputs

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -8,3 +8,19 @@
       <mat-hint>Hint</mat-hint>
     </mat-form-field>
   </p>
+  <p>
+    <mat-form-field appearance="legacy">
+      <mat-label>Author</mat-label>
+      <input matInput placeholder="Placeholder">
+      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+      <mat-hint>Name</mat-hint>
+    </mat-form-field>
+  </p>
+  <p>
+    <mat-form-field appearance="legacy">
+      <mat-label>Your name here..</mat-label>
+      <input matInput placeholder="Placeholder">
+      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+      <mat-hint>Name</mat-hint>
+    </mat-form-field>
+  </p>
