--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,18 +1,16 @@
 <h1 mat-dialog-title>Write your favorite quotes</h1>
-
+<div mat-form-field>
 <p>
     <mat-form-field appearance="outline">
       <mat-label>Your quote here</mat-label>
       <input matInput placeholder="Quotes">
-      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-      <mat-hint>Hint</mat-hint>
+      <mat-hint>Quote</mat-hint>
     </mat-form-field>
   </p>
   <p>
     <mat-form-field appearance="legacy">
       <mat-label>Author</mat-label>
       <input matInput placeholder="Placeholder">
-      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
       <mat-hint>Name</mat-hint>
     </mat-form-field>
   </p>
@@ -20,7 +18,12 @@
     <mat-form-field appearance="legacy">
       <mat-label>Your name here..</mat-label>
       <input matInput placeholder="Placeholder">
-      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
       <mat-hint>Name</mat-hint>
     </mat-form-field>
   </p>
+</div>
+<div mat-dialog-actions [align]="'end'">
+<button mat-raised-button color="primary">Submit</button>
+<button mat-raised-button color="primary">Close</button>
+
+</div>
