styled submit ts

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -23,7 +23,7 @@
   </p>
 </div>
 <div mat-dialog-actions [align]="'end'">
-<button mat-raised-button color="primary">Submit</button>
-<button mat-raised-button color="primary">Close</button>
+<button mat-raised-button color="accent">Save</button>
+<button mat-raised-button color="primary" mat-dialog-close>Close</button>
 
 </div>
