--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,26 +1,28 @@
 <h1 mat-dialog-title>Write your favorite quotes</h1>
 <div mat-form-field>
-<p>
-    <mat-form-field appearance="outline">
-      <mat-label>Your quote here</mat-label>
-      <input matInput placeholder="Quotes">
-      <mat-hint>Quote</mat-hint>
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field appearance="legacy">
-      <mat-label>Author</mat-label>
-      <input matInput placeholder="Placeholder">
-      <mat-hint>Name</mat-hint>
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field appearance="legacy">
-      <mat-label>Your name here..</mat-label>
-      <input matInput placeholder="Placeholder">
-      <mat-hint>Name</mat-hint>
-    </mat-form-field>
-  </p>
+<form [formGroup]="randomQuotes">
+    <p>
+        <mat-form-field appearance="outline">
+          <mat-label>Your quote here</mat-label>
+          <input matInput placeholder="Quotes">
+          <mat-hint>Quote</mat-hint>
+        </mat-form-field>
+      </p>
+      <p>
+        <mat-form-field appearance="legacy">
+          <mat-label>Author</mat-label>
+          <input matInput placeholder="Placeholder">
+          <mat-hint>Name</mat-hint>
+        </mat-form-field>
+      </p>
+      <p>
+        <mat-form-field appearance="legacy">
+          <mat-label>Your name here..</mat-label>
+          <input matInput placeholder="Placeholder">
+          <mat-hint>Name</mat-hint>
+        </mat-form-field>
+      </p>
+</form>
 </div>
 <div mat-dialog-actions [align]="'end'">
 <button mat-raised-button color="accent">Save</button>
