--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -4,21 +4,21 @@
     <p>
         <mat-form-field appearance="outline">
           <mat-label>Your quote here</mat-label>
-          <input matInput placeholder="Quotes">
+          <input formControlName="randomQuotes"  matInput placeholder="Quotes">
           <mat-hint>Quote</mat-hint>
         </mat-form-field>
       </p>
       <p>
         <mat-form-field appearance="legacy">
           <mat-label>Author</mat-label>
-          <input matInput placeholder="Placeholder">
+          <input formControlName="author" matInput placeholder="Placeholder">
           <mat-hint>Name</mat-hint>
         </mat-form-field>
       </p>
       <p>
         <mat-form-field appearance="legacy">
           <mat-label>Your name here..</mat-label>
-          <input matInput placeholder="Placeholder">
+          <input formControlName="yourName" matInput placeholder="Placeholder">
           <mat-hint>Name</mat-hint>
         </mat-form-field>
       </p>
