--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -25,7 +25,7 @@
 </form>
 </div>
 <div mat-dialog-actions [align]="'end'">
-<button mat-raised-button color="accent">Save</button>
+<button mat-raised-button color="accent" (click)="saveQuote()">Save</button>
 <button mat-raised-button color="primary" mat-dialog-close>Close</button>
 
 </div>
