--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -27,5 +27,10 @@
 <div mat-dialog-actions [align]="'end'">
 <button mat-raised-button color="accent" (click)="saveQuote()">Save</button>
 <button mat-raised-button color="primary" mat-dialog-close>Close</button>
-
+</div>
+<div class="stopwatch">
+    <span> {{hr}} </span>
+    <span> {{min}} </span>
+    <span> {{sec}} </span>
+    <span> {{ms}} </span>
 </div>
