--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,3 +1,4 @@
+ 
  <p>
         <mat-toolbar color="primary">
           <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
@@ -11,6 +12,23 @@
           <button mat-raised-button color="accent" (click)="openDialog()">Add Your Quotes</button>
         </mat-toolbar>
       </p>
+<div class="row container" justify-content="space-between">
+      <mat-card class="example-card">
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-content>
+          <p>This card has divider and indeterminate progress as footer</p>
+          <p> </p>
+        </mat-card-content>
+        <mat-divider inset></mat-divider>
+        <mat-card-actions>
+          <button mat-raised-button color="primary">UPVOTE</button>
+          <button mat-raised-button color="primary">DOWNVOTE</button>
+        </mat-card-actions>
+        <mat-card-footer>
+          <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+        </mat-card-footer>
+      </mat-card>
 
       <mat-card class="example-card">
         <mat-card-subtitle>Dog Breed</mat-card-subtitle>
@@ -21,12 +39,29 @@
         </mat-card-content>
         <mat-divider inset></mat-divider>
         <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
+          <button mat-raised-button color="primary">UPVOTE</button>
+          <button mat-raised-button color="primary">DOWNVOTE</button>
         </mat-card-actions>
         <mat-card-footer>
           <mat-progress-bar mode="indeterminate"></mat-progress-bar>
         </mat-card-footer>
       </mat-card>
-      
 
+      <mat-card class="example-card">
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-content>
+          <p>This card has divider and indeterminate progress as footer</p>
+          <p> </p>
+        </mat-card-content>
+        <mat-divider inset></mat-divider>
+        <mat-card-actions>
+          <button mat-raised-button color="primary">UPVOTE</button>
+          <button mat-raised-button color="primary">DOWNVOTE</button>
+        </mat-card-actions>
+        <mat-card-footer>
+          <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+        </mat-card-footer>
+      </mat-card>
+    </div>
+  
