created api service

--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -12,18 +12,25 @@
           <button mat-raised-button color="accent" (click)="openDialog()">Add Your Quotes</button>
         </mat-toolbar>
       </p>
-<div class="row container" justify-content="space-between">
+
+
+<div class="row container" fxLayoutGap>
       <mat-card class="example-card">
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-subtitle>Quote</mat-card-subtitle>
+        
         <mat-card-content>
           <p>This card has divider and indeterminate progress as footer</p>
-          <p> </p>
+         
+          
         </mat-card-content>
         <mat-divider inset></mat-divider>
         <mat-card-actions>
           <button mat-raised-button color="primary">UPVOTE</button>
           <button mat-raised-button color="primary">DOWNVOTE</button>
+          <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+            <mat-icon>delete</mat-icon>
+          </button>
+         
         </mat-card-actions>
         <mat-card-footer>
           <mat-progress-bar mode="indeterminate"></mat-progress-bar>
@@ -31,16 +38,21 @@
       </mat-card>
 
       <mat-card class="example-card">
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-subtitle>Quote</mat-card-subtitle>
+        
+        
         <mat-card-content>
           <p>This card has divider and indeterminate progress as footer</p>
-          <p> </p>
+          
+          
         </mat-card-content>
         <mat-divider inset></mat-divider>
         <mat-card-actions>
           <button mat-raised-button color="primary">UPVOTE</button>
           <button mat-raised-button color="primary">DOWNVOTE</button>
+          <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+            <mat-icon>delete</mat-icon>
+          </button>
         </mat-card-actions>
         <mat-card-footer>
           <mat-progress-bar mode="indeterminate"></mat-progress-bar>
@@ -48,16 +60,19 @@
       </mat-card>
 
       <mat-card class="example-card">
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-subtitle>Quote</mat-card-subtitle>
+        
         <mat-card-content>
           <p>This card has divider and indeterminate progress as footer</p>
-          <p> </p>
+          
         </mat-card-content>
         <mat-divider inset></mat-divider>
         <mat-card-actions>
           <button mat-raised-button color="primary">UPVOTE</button>
           <button mat-raised-button color="primary">DOWNVOTE</button>
+          <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+            <mat-icon>delete</mat-icon>
+          </button>
         </mat-card-actions>
         <mat-card-footer>
           <mat-progress-bar mode="indeterminate"></mat-progress-bar>
