--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
   .example-card {
     max-width: 400px;
-    justify-content: space-between;
+  }
+
+  #words{
+    color: pink;
   }
   
