--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -5,16 +5,16 @@
           </button>
           <span class="text-uppercase">My Quotes</span>
           <span class="example-spacer"></span>
-          <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+          <button mat-icon-button class="example-icon favorite-icon">
             <mat-icon>favorite</mat-icon>
           </button>
           <button mat-raised-button color="accent" (click)="openDialog()">Add Your Quotes</button>
         </mat-toolbar>
       </p>
       
-<div class="">
- <!--<app-form (addQuote)="addedQuote($event)"></app-form>-->
-</div>
+
+<app-form (addQuote)="addedQuote($event)"></app-form>
+
 
 
 <!--Quote template-->
