--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -1,3 +1,8 @@
 mat-form-field{
-    width: 100%;
+    width: 50%;
+    background-color: #afbec6;
+}
+.text-center{
+    border: 2px;
+    border-color: black;
 }
